MM-38366-trial-started-carousel-modal

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2547,6 +2547,7 @@
   "backstage_sidebar.integrations.incoming_webhooks": "Incoming Webhooks",
   "backstage_sidebar.integrations.oauthApps": "OAuth 2.0 Applications",
   "backstage_sidebar.integrations.outgoing_webhooks": "Outgoing Webhooks",
+  "benefits_trial.modal.learnMore": "Learn More",
   "billing.subscription.info.headsup": "Just a heads up",
   "billing.subscription.info.headsup.description": "You’re nearing the user limit with the free tier of Mattermost Cloud. We’ll let you know if you hit that limit.",
   "billing.subscription.info.mostRecentPaymentFailed": "Your most recent payment failed",
@@ -4366,6 +4367,18 @@
   "threading.threadMenu.unsave": "Unsave",
   "time_dropdown.choose_time": "Choose a time",
   "timestamp.datetime": "{relativeOrDate} at {time}",
+  "trial_benefits.modal.complianceExportDescription": "Run daily compliance reports and export them to a variety of formats consumable by third-party integration tools such as Smarsh (Actiance).",
+  "trial_benefits.modal.complianceExportTitle": "Run compliance exports with Mattermost Enterprise",
+  "trial_benefits.modal.controlledAccesssubitle": "Use System Roles to give designated users read and/or write access to select sections of System Console.",
+  "trial_benefits.modal.controlledAccessTitle": "Provide controlled access to the System Console with Mattermost Enterprise",
+  "trial_benefits.modal.customTermsDescription": "Create your own terms of service that new users must accept before accessing your Mattermost instance on desktop, web, or mobile.",
+  "trial_benefits.modal.customTermsTitle": "Create custom terms of service with Mattermost Enterprise",
+  "trial_benefits.modal.dataRetentionDescription": "Hold on to your data only as long as you need to. Create data retention jobs for select channels and teams to automatically delete disposable data.",
+  "trial_benefits.modal.dataRetentionTitle": "Create data retention schedules with Mattermost Enterprise",
+  "trial_benefits.modal.ldapDescription": "Use AD/LDAP groups to organize and apply actions to multiple users at once. Manage team and channel memberships, permissions, and more.",
+  "trial_benefits.modal.ldapTitle": "Synchronize your Active Directory/LDAP groups with Mattermost Enterprise",
+  "trial_benefits.modal.trialStartDescription": "Welcome to your Mattermost E20 trial! It expires on 01/08/03. Until then, enjoy the following benefits of Enterprise:",
+  "trial_benefits.modal.trialStarttitle": "Your trial has started! Explore the benefits of Enterprise",
   "tutorial_tip.ok": "Got it",
   "tutorial_tip.out": "Opt out of these tips.",
   "tutorial_tip.seen": "Seen this before? ",
